--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="search">Search…</string>
+
+    <string name="movie_info_type_movie">Movie</string>
+    <string name="movie_info_type_series">Series</string>
 </resources>
